# nar

./: CMakeLists.txt  LICENSE  README.md  db.mwb  db.mwb.bak  deploy.py  required.sh
gui/: new.py
nar/: required.sh
nar/lib/Cryption/: aes.cpp  aes.cpp~  aes.h  aes.h~  rsa.cpp  rsa.cpp~  rsa.h  test.cpp
nar/lib/Exception/: Exception.h  Exception.h~
nar/lib/HSocket/: HSocket.h  THSocket.h  UHSocket.h  holepunch.cpp  randevous.cpp  servertest.py  test  test.cpp
nar/lib/Logging/: log  logger.cpp  logger.h
nar/lib/Messaging/: MessageRS.cpp  MessageRS.h  a  a.out  daemon_ipc_receive.h  daemon_receive.h  find_message_action.h  messaging_utility.cpp  messaging_utility.h  server_receive.h  server_receive.h~  test.cpp  test2.cpp
nar/lib/Messaging/MessageTypes/: AesKey.cpp  AesKey.h  ChunkReceiveRequest.cpp  ChunkReceiveRequest.h  ChunkSendRequest.cpp  ChunkSendRequest.h  DaemonShutdown.cpp  DaemonShutdown.h  DeleteFile.cpp  DeleteFile.h  DeleteMachineChunk.cpp  DeleteMachineChunk.h  DirInfo.cpp  DirInfo.h  FilePull.cpp  FilePull.h  FilePullRequest.cpp  FilePullRequest.h  FilePush.cpp  FilePush.h  FilePushRequest.cpp  FilePushRequest.h  Handshake.cpp  Handshake.h  IPCBaseRequest.cpp  IPCBaseRequest.h  IPCBaseResponse.cpp  IPCBaseResponse.h  IPCConfig.cpp  IPCConfig.h  IPCDeleteFile.cpp  IPCDeleteFile.h  IPCLs.cpp  IPCLs.h  IPCMessage.h  IPCMkdir.cpp  IPCMkdir.h  IPCPull.cpp  IPCPull.h  IPCPush.cpp  (+54 more)
nar/lib/Socket/: ClientSocket.cpp~  ClientSocket.h  Packet.cpp  Packet.h  Socket.cpp  Socket.cpp~  Socket.h  Socket.h~  SocketException.h  TIMERTEST.cpp  U2CLI.cpp  U2CLIreceiver.cpp  U2CLIsender.cpp  U2SERV.cpp  U2Socket.cpp  U2Socket.h  USERV.cpp  USocket.cpp  USocket.h  UTEST.cpp  cli  cli.cpp  cli.cpp~  clireceiver  clisender  comp.sh  m  receiverlog  senderlog  serv.cpp  serv.cpp~  server  socket  socktest.cpp~  srv  test  u2testcomp.sh
nar/lib/USocket/: Packet.cpp  Packet.h  USocket.cpp  USocket.h  do.sh  packettest.cpp  randevous_server  randevous_server.cpp  receiver  receiver.cpp  sender  sender.cpp  test.cpp  udb
nar/narnode/: CMakeLists.txt  Makefile  Makefile.bak  Makefile~  cli  cli.cpp  cli.cpp~  clitasks.cpp  clitasks.h  clitest.sh  daemon.cpp  daemon.cpp~  daemon_dispatcher.cpp  exception.h  global.cpp  global.cpp~  global.h  global.h~  ipcclient.cpp  ipcdata.cpp  ipcdata.h  ipcserver.cpp  ipcserver.h  jsons  jsons~  narcli  nardaemon  reacTest.cpp  reactive.cpp  reactive.h  test.cpp  uservars.cpp  uservars.h  utility.cpp  utility.cpp~  utility.h  utility.h~
nar/narnode/ActiveTask/: ActiveFunctions.cpp  ActiveTask.h  ActiveTasks.h  DeleteFile.cpp  LS.cpp  Mkdir.cpp  Pull.cpp  Push.cpp  Register.cpp  Status.cpp
nar/narnode/CLITasks/: nar_config.h  nar_ls.h  nar_pull_file.h  nar_push_file.h  nar_register.h  nar_status.h
nar/narnode/File/: File.cpp  File.h  Test.cpp  final.txt  test  tester.cpp
nar/narnode/FileKeeper/: FileCompress.cpp  FileCompress.h  FileCompressor.cpp  FileCompressor.h  FileCryptor.cpp  FileCryptor.cpp~  FileCryptor.h  FileCryptor.h~  FileDecompress.cpp  FileDecompress.h  FileDecompressor.cpp  FileDecompressor.h  FileDecrypt.cpp  FileDecrypt.h  FileDecryptor.cpp  FileDecryptor.h  FileDefragment.cpp  FileDefragment.h  FileEncrypt.cpp  FileEncrypt.h  FileFragment.cpp  FileFragment.h  FileKeeper.cpp  FileKeeper.cpp~  FileKeeper.h  FileKeeper.h~  FileKeeperTest.cpp  Makefile  Makefile~
nar/narnode/FileKeeper/testfiles/: somefile0  somefile2  somefile3  somefile3~
nar/narnode/IPC/: ipcclient.cpp  ipcclient.h  ipcserver.cpp  ipcserver.h
nar/narnode/Socket/: ClientSocket.cpp  ClientSocket.cpp~  ClientSocket.h~  ServerSocket.cpp  ServerSocket.h~  Socket.cpp  Socket.h~  SocketException.h~  client  clientMain.cpp~  server  serverMain.cpp
nar/narnode/Task/: Config.h  Handshake.cpp  Handshake.h  ITask.cpp  ITask.cpp~  ITask.h  ITask.h~  LS.cpp  LS.h  PullFile.cpp  PullFile.h  PushFile.cpp  PushFile.cpp~  PushFile.h  PushFile.h~  Register.cpp  Register.cpp~  Register.h  Register.h~  Status.h
nar/narserver/: Database.cpp  Database.h  Database.h~  Database2.cpp  Makefile  ServerGlobal.cpp  ServerGlobal.h  a  a.out  databaseReadLock.h  databaseWriteLock.h  dbstructs.h  emptyDatabase.sql  file  jsons  k  narserver  peers.cpp  peers.h  server.cpp  server.cpp~  sgtest.cpp  sockinfo.cpp  sockinfo.h  spestruct.h  test.cpp
nar/narserver/Actions/: AuthActions.cpp  AuthActions.h  ServerActions.h  aes_key.h  authenticate_action.cpp  authenticated_action.cpp  daemon_shutdown_action.cpp  dir_info.h  file_pull.h  file_push.h  handshake.h  keepalive.h  keepalive_action.cpp  machine_register.h  register_action.cpp  user_register.h
nar/narserver/database_dump/: emptyDatabase.sql  emptyDatabase.sql~  emptyNarDump.sql  ipre_afterstyle.sql  iprestyle.sql  lastDb.sql  notrigger.sql  trigger_version.sql
tests/: aes.cpp  aes.cpp~  cryptor.cpp  cryptor.cpp~  file.cpp  m  res  res~
tests/oldtests/: Makefile  compressor.cpp  cryptor.cpp
tests/penetration/: connect.py
tests/penetration/p1/: p1.py  server.crt
tests/penetration/p1/messages/: 2  3  4
tests/penetration/p2/: p2.py
tests/penetration/p2/messages/: 1
tests/system/: 1469-675a-241b-cf71.enc  a132-f10e-bb73-88b6.z  pull.py  pushtest.py  register.py
tests/system/fs6/: push_system.py
tests/system/fs6/pullFolder/: test1
tests/system/util/: lstest.py  pull.py  pushtest.py
tests/tcp-ssl/: Makefile  client.cpp  dh2048.pem  dh512.pem  ipcdh2048.pem  ipcdh512.pem  ipcserver.crt  ipcserver.csr  ipcserver.key  pass  ref  server.cpp  server.crt  server.csr  server.key
tests/tcp-ssl/ipc/: ipcdh2048.pem  ipcserver.crt  ipcserver.csr  ipcserver.key
tests/tcp-ssl/server/: dh2048.pem  server.csr  server.key
tests/unit/: aes_rsa.cpp  base64.cpp  colormod.h  compressor.cpp  loggermain.cpp  lstest.py  pushtest.py  unit.py
tests/unit/fu1/: aes  aes_rsa.cpp
tests/unit/fu3/: base  base64.cpp
